--- a/agend.html
+++ b/agend.html
@@ -70,29 +70,26 @@
                 <div class="age_stitl">actividades</div>
                 <div class="age_holdb">
                 <div class="age_holdsec1">
-                    <div class="age_actbox1">
-                        <a class="age_actimg" style="background-image: url(css/img/img1.jpg)" href="deareu_eve.html" target="_self">
+                    <a class="age_actbox1" href="deareu_eve.html" target="_self">
+                        <div class="age_actimg" style="background-image: url(css/img/img1.jpg)" >
                             <div class="img_over"></div>
                             <div class="age_acttitl">Dear Europe</div>
-                        </a>
-                        <div class="age_acttxt"><p>O desafio "Dear Europe" consiste numa série de mensagens concebidas por pessoas de diferentes nacionalidades a quem foi proposto a criação de uma carta política, com os seus meios e métodos próprios, para um destinatário comum - a Europa. Deste modo, partimos das diferenças que separam nacionalidades para pensar em torno da ideia do que nos é comum, através dos mais diversos suportes (vídeo, ilustração, pintura, escultura, cartazes, postais, performances, etc).</p><p>O resultado final deste projecto é apresentado como uma mensagem seja visual, sonora e/ou textual para a Europa, reunindo os trabalhos de diferentes pessoas pertencentes ao meio criativo.</p></div>
-                    </div>
-                    <div class="age_actbox1">
+                        </div>
+                    </a>
+                    <a class="age_actbox1" href="quantes_eve.html" target="_self">
                         <div class="age_actimg" style="background-image: url(css/img/img3.jpg)">
                             <div class="img_over"></div>
                             <div class="age_acttitl">Põe quanto és no mínimo que fazes - Workshop de Turma</div>
                         </div>
-                        <div class="age_acttxt"><p>Num período em que andávamos todos mais preocupados com a definição de uma identidade Europeia e com a necessidade da mesma, decidimos deixar certas questões projectuais em standby por uma tarde e reunimos numa sala 47 aspirantes a Designer de Comunicação para que pudessem reflectir sobre a sua individualidade enquanto criadores e autores através de uma composição gráfica manual. Foi um momento de descoberta da identidade criativa de cada um, em que o trabalho e a diversão se sentaram lado a lado para que cada um pudesse reflectir sobre o seu eu e o outro, inclusivamente, a parte de si que considera não se inserir tanto no meio da Faculdade. Reconhecemos que o outro desempenha aqui um papel importante, porque transmite uma tomada de consciência do crescimento colectivo e das várias identidades criadoras que compõem a turma.</p><p>Foi, acima de tudo, um momento para conhecermos um pouco melhor os que partilharam estes 3 anos connosco.</p></div>
-                    </div>
+                    </a>
                 </div>
                 <div class="age_holdsec1">
-                    <div class="age_actbox2">
+                    <a class="age_actbox2" href="fdm_eve.html" target="_self">
                         <div class="age_actimg" style="background-image: url(css/img/img5.jpg)">
                             <div class="img_over"></div>
                             <div class="age_acttitl">O Fim do Mundo em Cuecas - Typejam Sessions'17</div>
                         </div>
-                        <div class="age_acttxt"><p>A Typejam Sessions é uma noite de experimentação e exploração gráfica e tipográfica que acontece todos os anos no final do 1º ano da Licenciatura em Design de Comunicação na Faculdade de Belas-Artes. A edição de 2017 focou-se na temática da Europa, desenvolvida pelos alunos finalistas, de maneira a confrontar os alunos de 1º ano com um tema fora da sua zona de conforto e de conhecer outras perspectivas sobre esta identidade que nos é comum, visto que as suas ideias de Europa, por mais simples que pudessem ser, ainda não se agarravam tanto a ideias pré-concebidas.</p><p>Foi, acima de tudo, um momento para conhecermos um pouco melhor os que partilharam estes 3 anos connosco.</p><p>Muito obrigado à turma.</p></div>
-                    </div>
+                    </a>
                 </div>
                 </div>
             </div>
@@ -120,8 +117,7 @@
         <div id="foot">
             <div id="footword">
                 <div class="foottitl">Sem destino a</div> 
-                <div class="foottxt">Exposição de Finalistas
-                <br>Design de Comunicação 2016/2017
+                <div class="foottxt">Exposição de Finalistas Design de Comunicação 2016/2017
                 <br>Faculdade de Belas-Artes de Lisboa
                 </div>
                 <a class="foot_ficha" href="fichtec.html" target="_self">ficha técnica</a>
