--- a/deareu_eve.html
+++ b/deareu_eve.html
@@ -111,7 +111,7 @@
         <div id="evenmain">
             <div class="evesec">
                 <div class="eve_txt">
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p></div>
+                <p>O desafio "Dear Europe" consiste numa série de mensagens concebidas por pessoas de diferentes nacionalidades a quem foi proposto a criação de uma carta política, com os seus meios e métodos próprios, para um destinatário comum - a Europa. Deste modo, partimos das diferenças que separam nacionalidades para pensar em torno da ideia do que nos é comum, através dos mais diversos suportes (vídeo, ilustração, pintura, escultura, cartazes, postais, performances, etc).</p><p>O resultado final deste projecto é apresentado como uma mensagem seja visual, sonora e/ou textual para a Europa, reunindo os trabalhos de diferentes pessoas pertencentes ao meio criativo.</p></div>
                 <div class="eve_pbox1">
                     <div class="eve_poster"></div>
                     <div class="eve_leg1">Happy Timmy</div>
@@ -173,8 +173,7 @@
         <div id="foot">
             <div id="footword">
                 <div class="foottitl">Sem destino a</div> 
-                <div class="foottxt">Exposição de Finalistas
-                <br>Design de Comunicação 2016/2017
+                <div class="foottxt">Exposição de Finalistas Design de Comunicação 2016/2017
                 <br>Faculdade de Belas-Artes de Lisboa
                 </div>
                 <a class="foot_ficha" href="fichtec.html" target="_self">ficha técnica</a>
