--- a/fichtec.html
+++ b/fichtec.html
@@ -149,8 +149,7 @@
         <div id="foot">
             <div id="footword">
                 <div class="foottitl">Sem destino a</div> 
-                <div class="foottxt">Exposição de Finalistas
-                <br>Design de Comunicação 2016/2017
+                <div class="foottxt">Exposição de Finalistas Design de Comunicação 2016/2017
                 <br>Faculdade de Belas-Artes de Lisboa
                 </div>
             </div>
