--- a/quantes_eve.html
+++ b/quantes_eve.html
@@ -1,12 +1,62 @@
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/home.css">
-        <link rel="stylesheet" href="css/sprojs.css">
-        <title>sem destino a</title>
+        <link rel="stylesheet" href="css/events.css">
+        <title>sem destino a - agenda</title>
         <link rel="icon" href="css/img/sda_icon.png" type="image/x-icon">
+        <style>
+            #evenhead{
+                background-image: url(css/img/img1.jpg);
+            }
+            .eve_poster{
+                background-image: url(css/img/img1.jpg);
+            }
+            .evesecl{
+                height: 1070px;
+                align-items: flex-end;
+                justify-content: space-between;
+                margin-top: -160px;
+                margin-bottom: 30px;
+                -webkit-align-items: flex-end;
+                -webkit-justify-content: space-between;
+            }
+            .evesecr{
+                width: 530px;
+                margin-top: 140px;
+            }
+            .eve_ibox2{
+                margin-bottom: 20px;
+            }
+            #eve_img1{
+                width: 390px;
+                height: 390px;
+                background-image: url(css/img/img2.jpg);
+            }
+            #eve_img2{
+                width: 300px;
+                height: 370px;
+                background-image: url(css/img/img3.jpg);
+            }
+            #eve_img3{
+                width: 300px;
+                height: 270px;
+                background-image: url(css/img/img4.jpg);
+            }
+            #eve_img4{
+                width: 1600px;
+                height: 300px;
+                background-image: url(css/img/img5.jpg);
+            }
+            .eve_leg3{
+                width: 200px;
+                font-size: 10px;
+                margin-top: 148px;
+            }
+        </style>
     </head>
     <body>
         <script>
@@ -52,19 +102,41 @@
                 </div>
             </div>
         </div>
-        <div id="sprojmain">
-            <div class="sproj_titl">Suffix</div>
-            <div class="sproj_hold">
-                <div class="sproj_stitl">Projecto de Design de Comnicação IV</div>
-                <div class="sproj_lhold"><a class="sproj_links" href="proj.html#desti2" target="_self">vamos</a> > <a class="sproj_links" href="proj.html#vt1" target="_self">You say you want a Revolution?</a> > <a class="sproj_links" href="proj.html#vst1" target="_self">The Whole Earth Catalogue</a></div>
+        <div id="evenhead">
+            <div class="evenhead_shirt">
+                <div class="eve_htitl">Põe quanto és no mínimo que fazes - Workshop de Turma</div>
+                <div class="eve_hstxt">de 17 Julho a 20 Agosto</div>
             </div>
-            <div class="sproj_hold">
-                <div class="sproj_plhold">
-                    <a class="sproj_plinks" href="catcorreia.html" target="_self">Catarina Correia</a>
-                    <a class="sproj_plinks">Ana Ganilho</a>
+        </div>
+        <div id="evenmain">
+            <div class="evesec">
+                <div class="eve_txt">
+                <p>Num período em que andávamos todos mais preocupados com a definição de uma identidade Europeia e com a necessidade da mesma, decidimos deixar certas questões projectuais em standby por uma tarde e reunimos numa sala 47 aspirantes a Designer de Comunicação para que pudessem reflectir sobre a sua individualidade enquanto criadores e autores através de uma composição gráfica manual. Foi um momento de descoberta da identidade criativa de cada um, em que o trabalho e a diversão se sentaram lado a lado para que cada um pudesse reflectir sobre o seu eu e o outro, inclusivamente, a parte de si que considera não se inserir tanto no meio da Faculdade. Reconhecemos que o outro desempenha aqui um papel importante, porque transmite uma tomada de consciência do crescimento colectivo e das várias identidades criadoras que compõem a turma.</p><p>Foi, acima de tudo, um momento para conhecermos um pouco melhor os que partilharam estes 3 anos connosco.</p></div>
+                <div class="eve_pbox1">
+                    <div class="eve_poster"></div>
+                    <div class="eve_leg1">Happy Timmy</div>
                 </div>
-                <div class="sproj_intro">
-                    <div class="sproj_txt"><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p><p>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p></div>
+            </div>
+            <div class="eveseci">
+                <div class="evesecl">
+                    <div class="eve_ibox1">
+                        <div id="eve_img1"></div>
+                        <div class="eve_leg1">Legenda</div>
+                    </div>
+                    <div class="eve_ibox1">
+                        <div id="eve_img2"></div>
+                    </div>
+                </div>
+                <div class="evesecr">
+                    <div class="eve_ibox2">
+                        <div id="eve_img3"></div>
+                        <div class="eve_leg2">Apathetic Timmy</div>
+                        </div>
+                    <div class="eve_ibox2">
+                        <div id="eve_img4"></div>
+                        <div class="eve_leg2">Legenda</div>
+                    </div>
+                    <div class="eve_leg3">Plotting Timmy</div>
                 </div>
             </div>
             <div class="slideshow-container">
@@ -86,9 +158,6 @@
                 <div class="mySlides fade">
                     <img src="css/img/img6.jpg" style="width:100%">
                 </div>
-                <div class="mySlides fade">
-                    <iframe width="560" height="800" src="https://www.youtube.com/embed/E3s-qZsjK8I" frameborder="0" allowfullscreen style="width: 100%"></iframe>
-                </div>
                 <div class="prev" onclick="plusSlides(-1)">&#10094;</div>
                 <div class="next" onclick="plusSlides(1)">&#10095;</div>
                 <div class="dot_holder">
@@ -98,7 +167,6 @@
                     <span class="dot" onclick="currentSlide(4)"></span>
                     <span class="dot" onclick="currentSlide(5)"></span>
                     <span class="dot" onclick="currentSlide(6)"></span>
-                    <span class="dot" onclick="currentSlide(7)"></span>
                 </div>
             </div>
         </div>
