--- a/insferreira.html
+++ b/insferreira.html
@@ -62,12 +62,12 @@
                         <a class="profl_tbox1a" href="28081963_proj.html" target="_self">
                         <div class="profl_timg1" style="background-image: url(css/img/totido/mbp/2.28081963.inesferreira/capa.jpg)"></div>
                             <div class="profl_ttitl">28.08.1963</div>
-                            <div class="profl_ttxt">Inês Ferreira</div>
+                            <div class="profl_ttxt">Cartaz Desdobrável</div>
                         </a>
                         <div class="profl_tbox1a">
-                        <div class="profl_timg1" style="background-image: url(css/img/patrn3.jpg)"></div>
-                            <div class="profl_ttitl">nome do projecto</div>
-                            <div class="profl_ttxt">legenda</div>
+                        <div class="profl_timg1" style="background-image: url(css/img/totido/mbp/4.r2.inesferreira/capa.jpg)"></div>
+                            <div class="profl_ttitl">I Am A Man</div>
+                            <div class="profl_ttxt">Cartazes</div>
                         </div>
                     </div>
                     <div class="profl_tfence1">
