--- a/proj.html
+++ b/proj.html
@@ -125,55 +125,55 @@
                         <a class="proj_tbox1c" href="marchofw_proj.html" target="_self">
                         <div class="proj_timg1" style="background-image: url(css/img/totido/mbp/1.marchofw.abelquental/capa.jpg)"></div>
                             <div class="proj_ttitl">March of Washington</div>
-                            <div class="proj_ttxt">Cartáz Desdobrável</div>
+                            <div class="proj_ttxt">Cartaz Desdobrável</div>
                         </a>
                         <a class="proj_tbox1d" href="28081963_proj.html" target="_self">
                         <div class="proj_timg1" style="background-image: url(css/img/totido/mbp/2.28081963.inesferreira/capa.jpg)"></div>
                             <div class="proj_ttitl">28.08.1963</div>
                             <div class="proj_ttxt">Cartaz Desdobrável</div>
                         </a>
-                        <div class="proj_tbox2b">
+                        <a class="proj_tbox2b" href="iaam_insferreira_proj.html" target="_self">
                         <div class="proj_timg2" style="background-image: url(css/img/totido/mbp/4.r2.inesferreira/capa.jpg)"></div>
-                            <div class="proj_ttitl">(R2)</div>
+                            <div class="proj_ttitl">I Am A Man</div>
                             <div class="proj_ttxt">Cartazes</div>
-                        </div>
-                        <div class="proj_tbox1a">
+                        </a>
+                        <a class="proj_tbox1a" href="negrnecrnekr_proj.html" target="_self">
                         <div class="proj_timg1" style="background-image: url(css/img/totido/mbp/7.r2.carolinacouto/capa.jpg)"></div>
-                            <div class="proj_ttitl">(R2)</div>
+                            <div class="proj_ttitl">Negro, Necro, Nekro</div>
                             <div class="proj_ttxt">Cartazes</div>
-                        </div>
-                        <div class="proj_tbox1b">
+                        </a>
+                        <a class="proj_tbox1b" href="explcont_proj.html" target="_self">
                         <div class="proj_timg1" style="background-image: url(css/img/totido/mbp/9.explicitcontent/capa.jpg)"></div>
                             <div class="proj_ttitl">Explicit Content</div>
                             <div class="proj_ttxt">Publicação Periódica</div>
-                        </div>
-                        <div class="proj_tbox2e">
+                        </a>
+                        <a class="proj_tbox2e" href="aura_proj.html" target="_self">
                         <div class="proj_timg2" style="background-image: url(css/img/totido/mbp/11.aura/capa.jpg)"></div>
-                            <div class="proj_ttitl">Aura</div>
+                            <div class="proj_ttitl">AURA: ecos de r-evolução</div>
                             <div class="proj_ttxt">Publicação Periódica</div>
-                        </div>
+                        </a>
                     </div>
                     <div class="proj_tfence2">
-                        <div class="proj_tbox2a">
+                        <a class="proj_tbox2a" href="iaam_tgmarinho_proj.html" target="_self">
                         <div class="proj_timg2" style="background-image: url(css/img/totido/mbp/5.r2.tiagomarinho/capa.jpg)"></div>
-                            <div class="proj_ttitl">(R2)</div>
+                            <div class="proj_ttitl">I Am A Man</div>
                             <div class="proj_ttxt">Cartazes</div>
-                        </div>
-                        <div class="proj_tbox1e">
+                        </a>
+                        <a class="proj_tbox1e" href="frad_sarjorge_proj.html" target="_self">
                         <div class="proj_timg1" style="background-image: url(css/img/totido/mbp/6.r2.sarajorge/capa.jpg)"></div>
-                            <div class="proj_ttitl">(R2)</div>
+                            <div class="proj_ttitl">Free Angela Davis</div>
                             <div class="proj_ttxt">Cartazes</div>
-                        </div>
-                        <div class="proj_tbox2d">
+                        </a>
+                        <a class="proj_tbox2d" href="whtitmean_proj.html" target="_self">
                         <div class="proj_timg2" style="background-image: url(css/img/totido/mbp/8.r2.leonorcarvalho/capa.jpg)"></div>
                             <div class="proj_ttitl">What does it mean to be a criminal in this society?</div>
                             <div class="proj_ttxt">Cartazes</div>
-                        </div>
-                        <div class="proj_tbox1f">
+                        </a>
+                        <a class="proj_tbox1f" href="circle_proj.html" target="_self">
                         <div class="proj_timg1" style="background-image: url(css/img/totido/mbp/10.circle/capa.jpg)"></div>
                             <div class="proj_ttitl">Cir.cle</div>
                             <div class="proj_ttxt">Publicação Periódica</div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div id="vt1s2" class="msprojtitl">Women’s Lib</div>
