--- a/iaam_insferreira_proj.html
+++ b/iaam_insferreira_proj.html
@@ -4,8 +4,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/home.css">
-        <link rel="stylesheet" href="css/profl.css">
-        <title>sem destino a - agenda</title>
+        <link rel="stylesheet" href="css/sprojs.css">
+        <title>sem destino a</title>
         <link rel="icon" href="css/img/sda_icon.png" type="image/x-icon">
     </head>
     <body>
@@ -52,44 +52,39 @@
                 </div>
             </div>
         </div>
-        <div id="proflmain">
-            <div class="profl_sec">
-                <div class="profl_titl">Abel Quental</div>
-                <div class="profl_links"><a class="profl_link" href="#" onclick='window.open("https://www.behance.net/abelquental");return false;'>behance.net/abelquental</a><br><a class="profl_link" href="mailto:abeljquental@gmail.com" target="_blank">abeljquental@gmail.com</a></div>
+        <div id="sprojmain">
+            <div class="sproj_titl">I Am A Man</div>
+            <div class="sproj_hold">
+                <div class="sproj_stitl">Projecto de Design de Comnicação IV</div>
+                <div class="sproj_lhold"><a class="sproj_links" href="proj.html#desti2" target="_self">vamos</a> > <a class="sproj_links" href="proj.html#vt1" target="_self">Turn on, tune in, drop out</a> > <a class="sproj_links" href="proj.html#vt1s1" target="_self">Movimento Black Power</a></div>
             </div>
-            <div class="profl_tplaygrnd1">
-                    <div class="profl_tfence1">
-                        <a class="profl_tbox1a" href="marchofw_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/totido/mbp/1.marchofw.abelquental/capa.jpg)"></div>
-                            <div class="profl_ttitl">March of Washington</div>
-                            <div class="profl_ttxt">Cartaz Desdobrável</div>
-                        </a>
-                        <div class="profl_tbox1a">
-                        <div class="profl_timg1" style="background-image: url(css/img/patrn3.jpg)"></div>
-                            <div class="profl_ttitl">nome do projecto</div>
-                            <div class="profl_ttxt">legenda</div>
-                        </div>
-                    </div>
-                    <div class="profl_tfence1">
-                        <div class="profl_tbox2b">
-                        <div class="profl_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
-                            <div class="profl_ttitl">nome do projecto</div>
-                            <div class="profl_ttxt">legenda</div>
-                        </div>
-                        <div class="profl_tbox1b">
-                        <div class="profl_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
-                            <div class="profl_ttitl">nome do projecto</div>
-                            <div class="profl_ttxt">legenda</div>
-                        </div>
-                    </div>
-                    <div class="profl_tfence1">
-                        <div class="profl_tbox2c">
-                        <div class="profl_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
-                            <div class="profl_ttitl">nome do projecto</div>
-                            <div class="profl_ttxt">legenda</div>
-                        </div>
-                    </div>
+            <div class="sproj_hold">
+                <div class="sproj_plhold">
+                    <a class="sproj_plinks" href="insferreira.html" target="_self">Inês Ferreira</a>
                 </div>
+            </div>
+            <div class="slideshow-container">
+                <div class="mySlides fade">
+                    <img src="css/img/totido/mbp/4.r2.inesferreira/ilovepdf_com.jpg" style="width:100%">
+                </div>
+                <div class="mySlides fade">
+                    <img src="css/img/totido/mbp/4.r2.inesferreira/ilovepdf_com-1.jpg" style="width:100%">
+                </div>
+                <div class="mySlides fade">
+                    <img src="css/img/totido/mbp/4.r2.inesferreira/ilovepdf_com-2.jpg" style="width:100%">
+                </div>
+                <div class="mySlides fade">
+                    <img src="css/img/totido/mbp/4.r2.inesferreira/ilovepdf_com-3.jpg" style="width:100%">
+                </div>
+                <div class="prev" onclick="plusSlides(-1)">&#10094;</div>
+                <div class="next" onclick="plusSlides(1)">&#10095;</div>
+                <div class="dot_holder">
+                    <span class="dot" onclick="currentSlide(1)"></span>
+                    <span class="dot" onclick="currentSlide(2)"></span> 
+                    <span class="dot" onclick="currentSlide(3)"></span>
+                    <span class="dot" onclick="currentSlide(4)"></span>
+                </div>
+            </div>
         </div>
         <div id="foot">
             <div id="footword">
