--- a/leocarvalho.html
+++ b/leocarvalho.html
@@ -54,15 +54,15 @@
         </div>
         <div id="proflmain">
             <div class="profl_sec">
-                <div class="profl_titl">Abel Quental</div>
-                <div class="profl_links"><a class="profl_link" href="#" onclick='window.open("https://www.behance.net/abelquental");return false;'>behance.net/abelquental</a><br><a class="profl_link" href="mailto:abeljquental@gmail.com" target="_blank">abeljquental@gmail.com</a></div>
+                <div class="profl_titl">Leonor Carcalho</div>
+                <div class="profl_links"><a class="profl_link" href="#" onclick='window.open("https://www.behance.net/leonor96");return false;'>behance.net/leonor96</a><br><a class="profl_link" href="mailto:carvalho.leonor@live.com.pt" target="_blank">carvalho.leonor@live.com.pt</a></div>
             </div>
             <div class="profl_tplaygrnd1">
                     <div class="profl_tfence1">
-                        <a class="profl_tbox1a" href="marchofw_proj.html" target="_self">
-                        <div class="profl_timg1" style="background-image: url(css/img/totido/mbp/1.marchofw.abelquental/capa.jpg)"></div>
-                            <div class="profl_ttitl">March of Washington</div>
-                            <div class="profl_ttxt">Cartaz Desdobrável</div>
+                        <a class="profl_tbox1a" href="whtitmean_proj.html" target="_self">
+                        <div class="profl_timg1" style="background-image: url(css/img/totido/mbp/8.r2.leonorcarvalho/capa.jpg)"></div>
+                            <div class="profl_ttitl">What does it mean to be a criminal in this society?</div>
+                            <div class="profl_ttxt">Cartazes</div>
                         </a>
                         <div class="profl_tbox1a">
                         <div class="profl_timg1" style="background-image: url(css/img/patrn3.jpg)"></div>
